[project]
name = "pddl-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=0.8.5",
    "numpy>=2.3.1",
    "openai>=1.95.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "vllm>=0.4.0",
]
